--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       >
         <div class="carsListItem">
           <h2>BMW E36 M3</h2>
-          <img src="/pictures/e36.png" alt="BMW E36 M3" class="carSmall" />
+          <img src="./pictures/e36.png" alt="BMW E36 M3" class="carSmall" />
         </div>
       </div>
       <div
@@ -30,7 +30,7 @@
       >
         <div class="carsListItem">
           <h2>BMW E92 M3</h2>
-          <img src="/pictures/e92.png" alt="BMW E92 M3" class="carSmall" />
+          <img src="./pictures/e92.png" alt="BMW E92 M3" class="carSmall" />
         </div>
       </div>
       <div
@@ -41,7 +41,7 @@
         <div class="carsListItem">
           <h2>Nissan Silvia S14</h2>
           <img
-            src="/pictures/s14.png"
+            src="./pictures/s14.png"
             alt="Nissan Silvia S14"
             class="carSmall"
           />
@@ -55,7 +55,7 @@
         <div class="carsListItem">
           <h2>Nissan Skyline R32 GT-R</h2>
           <img
-            src="/pictures/r32.png"
+            src="./pictures/r32.png"
             alt="Nissan Skyline R32 GT-R"
             class="carSmall"
           />
@@ -68,7 +68,7 @@
       >
         <div class="carsListItem">
           <h2>BMW G80 M3</h2>
-          <img src="/pictures/g80.png" alt="BMW G80 M3" class="carSmall" />
+          <img src="./pictures/g80.png" alt="BMW G80 M3" class="carSmall" />
         </div>
       </div>
     </section>
